[package]
name = "dpkg-deb-rst"
version = "0.1.0"
authors = ["Sam Saint-Pettersen <s.stpettersen+github@gmail.com>"]

[dependencies]
ark = { git = "https://github.com/stpettersens/ark.git" }
tatar = { git = "https://github.com/stpettersens/tatar.git" }
clioptions = "0.1.0"
dos2unix = "0.1.0"
regex = "0.1.77"
rustc-serialize = "*"
Inflector = "0.5.0"
